--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #fh5co-main {
   max-width: 760px;
-  min-height: 600px;
+  min-height: 1000px;
   margin: 5em auto 5em auto;
   position: relative;
   background: rgba(0, 0, 0, 0.85);
@@ -321,6 +321,7 @@ figure {
   text-align: left;
   width: 100%;
   float: left;
+  margin-top: 10px;
 }
 .fh5co-feature .fh5co-icon {
   float: left;
