経歴を変更

--- a/new-portfolio/src/pug/index.pug
+++ b/new-portfolio/src/pug/index.pug
@@ -8,4 +8,6 @@ prepend config-block
 //- append javascript-block
 
 block content-block
-  | hello, world!
+  .profile
+    h1 井上敦登　　Atsuto Inoue
+    p て捨てsと
