--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,18 @@ a:hover, a:active, a:focus {
 }
 
 p {
-  margin-bottom: 1em;
+  margin-bottom: .5em;
 }
 
 h1, h2, h3, h4, h5, h6 {
   color: #fff;
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-weight: 400;
-  margin: 0 0 30px 0;
+  margin: 0 0 10px 0;
+}
+
+img{
+  max-width: 100%;
 }
 
 ::-webkit-selection {
@@ -70,7 +74,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #fh5co-main {
-  max-width: 760px;
+  max-width: 800px;
   min-height: 1000px;
   margin: 5em auto 5em auto;
   position: relative;
@@ -446,6 +450,10 @@ figure {
   .row-bottom-padded-sm {
     padding-bottom: 1em;
   }
+}
+
+.profile-en{
+  margin-bottom: 2em;
 }
 
 /*# sourceMappingURL=style.css.map */
